# OpenVino_human_pose_estimator

./: CMakeLists.txt  README.md  main.cpp
